--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="example"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB1uU44fN65wiRqXFgDEH9TZtiEBxjQt_8"/>
+            android:value="YOUR_API_KEY"/>
         <meta-data android:name="flutterEmbedding"
             android:value="2" />
         <activity
